--- a/style.css
+++ b/style.css
@@ -1,23 +1,40 @@
-#navbarNavDropdown.collapse.navbar-collapse{
-    width: 604px;
-}
-
-.navbar.navbar-expand-lg.navbar-light.bg-light{
-    width: 604px;
-}
-.bg-light{
-    background-color: none;
-}
 
 .logo{
    margin-left: 200px;
 }
-header.container,#picture1.container,#picture2.container,#picture3.container,#situation,#contact,footer.container{
-    width: 604px;
-}
+
 a.nav-link{
     margin-left: 65px;
 }
+
 header{
     background-image: url(backMenu.png);
+}
+nav{
+    color: white;
+}
+#situation{
+    background-image: url(backSituation.png);
+    height: 190px;
+}
+#contact{
+    background-color: rgb(201, 43, 64);
+}
+h2{
+    color: white;
+}
+p{
+    color: white;
+}
+#picture1{
+    background-image: url(picture1.png);
+    height: 190px;
+}
+#picture2{
+    background-image: url(picture2.png);
+    height: 190px;
+}
+#picture3{
+    background-image: url(picture3.png);
+    height: 190px;
 }
